# ERPNEXTAKG

./: .gitignore  CUSTOM_DOCTYPES.md  MANIFEST.in  OFFICE_WORKER.md  README.md  license.txt  pyproject.toml  requirements.txt  setup.py
akg_ess/: BUILD.md  DB_NOTES.md  RETENTION.md  TESTING.md  api.py  attendance.py  build.mjs  checkin_guards.py  hooks.py  install.py  modules.txt  package-lock.json  package.json  patches.txt  retention.py  webpush.py
akg_ess/akg_ess/doctype/akg_ess_settings/: akg_ess_settings.json  akg_ess_settings.py
akg_ess/akg_ess/doctype/ess_attendance_correction/: ess_attendance_correction.json  ess_attendance_correction.py
akg_ess/akg_ess/doctype/ess_daily_attendance/: ess_daily_attendance.json  ess_daily_attendance.py
akg_ess/akg_ess/doctype/ess_notification/: ess_notification.json  ess_notification.py
akg_ess/akg_ess/doctype/ess_push_subscription/: ess_push_subscription.json  ess_push_subscription.py
akg_ess/akg_ess/doctype/geofence_violation/: geofence_violation.json  geofence_violation.py
akg_ess/akg_ess/doctype/missed_checkout/: missed_checkout.json  missed_checkout.py
akg_ess/akg_ess/doctype/petty_cash_top_up_request/: petty_cash_top_up_request.json  petty_cash_top_up_request.py
akg_ess/akg_ess/doctype/petty_cash_topup_request/: petty_cash_topup_request.json  petty_cash_topup_request.py
akg_ess/akg_ess/doctype/scope_of_work/: scope_of_work.json  scope_of_work.py
akg_ess/akg_ess/report/ess_attendance_report/: ess_attendance_report.js  ess_attendance_report.json  ess_attendance_report.py
akg_ess/akg_ess/report/ess_overtime_summary/: ess_overtime_summary.js  ess_overtime_summary.json  ess_overtime_summary.py
akg_ess/akg_ess/tests/: test_approval_authority.py  test_corrections.py  test_hours.py  test_integrity.py  test_offzone.py  test_permissions.py  test_recompute_day.py  test_retention.py  test_single_punch_guard.py  utils.py
akg_ess/akg_ess/workspace/akg_ess/: akg_ess.json
akg_ess/fixtures/: custom_docperm.json  custom_field.json  role.json
akg_ess/patches/: add_performance_indexes.py  set_retention_defaults.py
akg_ess/public/: api.js  app.jsx  attendance.jsx  data.js  ess.bundle.js  leaves.jsx  manifest.webmanifest  missed-checkout.jsx  monthly-report.jsx  notifications.jsx  petty.jsx  profile.jsx  styles.css  sw.js  ui.jsx
akg_ess/public/akg_ess/: api.js  attendance.jsx  data.js  leaves.jsx  monthly-report.jsx  petty.jsx  profile.jsx  sw.js  ui.jsx
akg_ess/www/ess/: index.html  index.py
dev/: RUNBOOK.md  apps.json  docker-compose.yml  restore.sh
docs/: MISSED_CHECKOUT_HANDOFF.md  USER_MANUAL_HANDOFF.md
