[project]
name = "akg_ess"
authors = [
    { name = "AKG Contracting", email = "it@akg.ae"}
]
description = "Employee Self-Service PWA for AKG Contracting (attendance, leaves, petty cash)."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # frappe and erpnext are provided by the bench, do not list them here.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "akg_ess"
