[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akg_ess"
version = "0.1.7"
description = "Employee Self-Service PWA for AKG Contracting (attendance, leaves, petty cash)."
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AKG Contracting", email = "it@akg.ae"},
]
dependencies = []

[tool.setuptools.packages.find]
include = ["akg_ess*"]

[tool.setuptools.package-data]
akg_ess = [
    "**/*.css", "**/*.csv", "**/*.html", "**/*.ico",
    "**/*.js", "**/*.json", "**/*.jsx", "**/*.md",
    "**/*.png", "**/*.py", "**/*.svg", "**/*.txt",
    "**/*.webmanifest", "**/*.woff", "**/*.woff2",
]
